# nyt-games

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: llm_client.py
src/connections/: __init__.py  models.py  solver.py  utils.py
tests/connections/: test_utils.py
