[tool.poetry]
name = "nyt-games"
version = "0.1.0"
description = ""
authors = ["alb0tross <brian.j.ok@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
openai = "^1.52.2"
load-dotenv = "^0.1.0"
pre-commit = "^4.0.1"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
